2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Small cleanup.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Clean up EOS and Previous handling.
	
	* doc/en/Muine.PluginLib/IPlayer.xml:

	Slight clean up in the UIManager example code.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/ProgressWindow.cs:
	* src/SongDatabase.cs:

	Small ProgressWindow cleanup.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Now volume and repeat react to GConf changes too.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/Config.cs:
	* src/CoverGetter.cs:
	* src/Global.cs:
	* src/GnomeProxy.cs:
	* src/SongDatabase.cs:

	- Clean up Global stuff to actually be global.
	- GnomeProxy, SongDatabase and CoverGetter react to GConf changes

2005-01-08  Tamara Roberson  <foxxygirltamara@gmail.com>

	* configure.in:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/Global.cs:
	* src/HandleView.cs:
	* src/Makefile.am:
	R src/Muine.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:
	
	Renamed the Muine class to Global to eliminate confusion with the Muine
	namespace.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Store song after the album cover has been stored,
	in case of unexpected exit.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/SongDatabase.cs:

	Do look for covers for new files even though CoverDB.Loading = true.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Gracefully cancel the thread instead of using a brute Thread.Abort ().

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Start playing when opening a playlist.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/SongDatabase.cs:
	* src/ThreadBase.cs:

	Port the CoverDatabase thread over to ThreadBase as well.